--- a/CSS/projects/projects_stylesheet.css
+++ b/CSS/projects/projects_stylesheet.css
@@ -5,12 +5,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
-html{
-    
-    overflow: auto;
-    height: 100vh;
-    scroll-snap-type: y mandatory;
-}
+
 
 body{
 	/*background-image: url(../../Images/headerPic.png);
@@ -21,6 +16,21 @@ body{
 
  
 
+}
+
+#loadScreen{
+    height:100vh;
+    width:100%;
+    background-color: white;
+    z-index: 1000;
+    position: relative;
+    font-size: 1rem;
+    text-align: center;
+    padding-top: 20vh;
+}
+
+.ui-loader h1{
+    display: none;
 }
 
 #backgroundImg{
@@ -415,6 +425,7 @@ body{
       width: 100%;
     }
   }
+
 
 
 
